src/objects/E2_Derived_Effort__c.object
<CustomObject>
    <description>Estimator 2.0</description>
    <fields>
        <fullName>Allocation_Min__c</fullName>
        <description>Minimum allocation percentage hours needed to allocate to role in phase (TDB)</description>
        <inlineHelpText>Minimum allocation percentage hours needed to allocate to role in phase (TDB)</inlineHelpText>
        <label>Allocation Min</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Allocation__c</fullName>
        <description>Allocation % of Role specified in the scopes .</description>
        <inlineHelpText>Allocation % of Role specified in the scopes .</inlineHelpText>
        <label>Allocation(%)</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Cloned_From__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Cloned From</label>
        <referenceTo>E2_Derived_Effort__c</referenceTo>
        <relationshipName>E2_Derived_Efforts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Derived_Effort_Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Derived effort group which contains the templates related to that group.</description>
        <inlineHelpText>Derived effort group which contains the templates related to that group.</inlineHelpText>
        <label>Derived Effort Group</label>
        <referenceTo>E2_Derived_Effort_Group__c</referenceTo>
        <relationshipName>E2_Derived_Efforts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Derived_Hrs__c</fullName>
        <description>This field is used to store the calculated hours based on the %Allocation, Of Phase, Of Role</description>
        <inlineHelpText>Derived Hrs are calculated hrs dependent on %allocation, of phase, of role</inlineHelpText>
        <label>Derived Hrs</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Include_When_Hours__c</fullName>
        <label>Include When Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Include_When__c</fullName>
        <label>Include When</label>
        <picklist>
            <picklistValues>
                <fullName>always</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>hours exceed or equals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>hours are less than</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Is_Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Shows if the template is active for use or not.</description>
        <inlineHelpText>Shows if the template is active for use or not.</inlineHelpText>
        <label>Is Active?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Of_Phase__c</fullName>
        <globalPicklist>E2_Phases</globalPicklist>
        <label>In Phase</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Of_Role__c</fullName>
        <globalPicklist>E2_Role</globalPicklist>
        <label>Of Role</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Original_Allocation_Hours__c</fullName>
        <description>Original Allocation Hours to store % of total hours defined by template manager at the time of creation/edit</description>
        <inlineHelpText>Original Allocation Hours to store % of total hours defined by template manager at the time of creation/edit</inlineHelpText>
        <label>Original Allocation Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Presales_LOE__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Relationship to Estimate object</description>
        <inlineHelpText>Relationship to Estimate object</inlineHelpText>
        <label>Estimate</label>
        <referenceTo>CMC_Presales_LOE__c</referenceTo>
        <relationshipName>E2_Derived_Efforts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <description>Role to which the derived hours is applied.</description>
        <globalPicklist>E2_Role</globalPicklist>
        <inlineHelpText>Role to which the derived hours is applied.</inlineHelpText>
        <label>Role</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>To_Phase__c</fullName>
        <globalPicklist>E2_Phases</globalPicklist>
        <label>In Phase</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>UniqueKey__c</fullName>
        <label>UniqueKey</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <label>Derived Effort</label>
    <listViews>
        <fullName>All</fullName>
        <columns>CREATED_DATE</columns>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>Allocation__c</columns>
        <columns>Cloned_From__c</columns>
        <columns>Derived_Effort_Group__c</columns>
        <columns>Derived_Hrs__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Derived Effort Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Derived Effort</pluralLabel>
    <recordTypes>
        <fullName>Template</fullName>
        <active>true</active>
        <description>This is used by the Derived Effort Template Managers as they are building out the template used in calculating efforts on Estimate level.</description>
        <label>Template</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>E2_Include_when_Hours</fullName>
        <active>true</active>
        <description>Rule for Include_When_Hours__c field required when Include_When__c field value is otherthen always</description>
        <errorConditionFormula>AND( OR(ISBLANK(Include_When_Hours__c),Include_When_Hours__c&lt;=0), OR(ISPICKVAL( Include_When__c , &apos;hours exceed&apos;),ISPICKVAL( Include_When__c , &apos;hours are less than&apos;)))</errorConditionFormula>
        <errorDisplayField>Include_When_Hours__c</errorDisplayField>
        <errorMessage>Please provide required field value.</errorMessage>
    </validationRules>
</CustomObject>